# videosplit

./: .gitignore  gui.py  last.py  main.py  pyproject.toml  tst.py
