[tool.poetry]
name = "video cutter"
version = "0.1.0"
description = ""
authors = ["Divider <89965004+it-cio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
moviepy = "^1.0.3"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
